// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should match alt snapshot 1`] = `
<Test
  alt={true}
>
  <Tabs
    alt={true}
  >
    <DefaultTabs
      alt={true}
      tabs={
        Object {
          "c1": Object {
            "children": "content1",
            "title": "c1",
          },
          "c2": Object {
            "children": "content2",
            "title": "c2",
          },
        }
      }
    >
      <Card>
        <div
          className="card"
        >
          <Nav
            alt={true}
            tabs={
              Object {
                "c1": Object {
                  "children": "content1",
                  "title": "c1",
                },
                "c2": Object {
                  "children": "content2",
                  "title": "c2",
                },
              }
            }
          >
            <ul
              className="nav nav-tabs nav-tabs-alt"
            >
              <li
                className="nav-item"
                key="tab-c1"
                onClick={[Function]}
              >
                <a
                  className="nav-link active"
                >
                  c1
                </a>
              </li>
              <li
                className="nav-item"
                key="tab-c2"
                onClick={[Function]}
              >
                <a
                  className="nav-link"
                >
                  c2
                </a>
              </li>
            </ul>
          </Nav>
          <CardBody>
            <div
              className="card-body"
            >
              <div
                className="tab-content"
              >
                <div
                  className="tab-pane active"
                >
                  content1
                </div>
              </div>
            </div>
          </CardBody>
        </div>
      </Card>
    </DefaultTabs>
  </Tabs>
</Test>
`;

exports[`Tabs should match cards snapshot 1`] = `
<Test
  cards={true}
>
  <Tabs
    cards={true}
  >
    <CardTabs
      tabs={
        Object {
          "c1": Object {
            "children": "content1",
            "title": "c1",
          },
          "c2": Object {
            "children": "content2",
            "title": "c2",
          },
        }
      }
    >
      <div
        className="card-tabs"
      >
        <Nav
          tabs={
            Object {
              "c1": Object {
                "children": "content1",
                "title": "c1",
              },
              "c2": Object {
                "children": "content2",
                "title": "c2",
              },
            }
          }
        >
          <ul
            className="nav nav-tabs"
          >
            <li
              className="nav-item"
              key="tab-c1"
              onClick={[Function]}
            >
              <a
                className="nav-link active"
              >
                c1
              </a>
            </li>
            <li
              className="nav-item"
              key="tab-c2"
              onClick={[Function]}
            >
              <a
                className="nav-link"
              >
                c2
              </a>
            </li>
          </ul>
        </Nav>
        <div
          className="tab-content"
        >
          <div
            className="tab-pane card active"
          >
            <CardBody>
              <div
                className="card-body"
              >
                content1
              </div>
            </CardBody>
          </div>
        </div>
      </div>
    </CardTabs>
  </Tabs>
</Test>
`;

exports[`Tabs should match fill snapshot 1`] = `
<Test
  fill={true}
>
  <Tabs
    fill={true}
  >
    <DefaultTabs
      fill={true}
      tabs={
        Object {
          "c1": Object {
            "children": "content1",
            "title": "c1",
          },
          "c2": Object {
            "children": "content2",
            "title": "c2",
          },
        }
      }
    >
      <Card>
        <div
          className="card"
        >
          <Nav
            fill={true}
            tabs={
              Object {
                "c1": Object {
                  "children": "content1",
                  "title": "c1",
                },
                "c2": Object {
                  "children": "content2",
                  "title": "c2",
                },
              }
            }
          >
            <ul
              className="nav nav-tabs nav-fill"
            >
              <li
                className="nav-item"
                key="tab-c1"
                onClick={[Function]}
              >
                <a
                  className="nav-link active"
                >
                  c1
                </a>
              </li>
              <li
                className="nav-item"
                key="tab-c2"
                onClick={[Function]}
              >
                <a
                  className="nav-link"
                >
                  c2
                </a>
              </li>
            </ul>
          </Nav>
          <CardBody>
            <div
              className="card-body"
            >
              <div
                className="tab-content"
              >
                <div
                  className="tab-pane active"
                >
                  content1
                </div>
              </div>
            </div>
          </CardBody>
        </div>
      </Card>
    </DefaultTabs>
  </Tabs>
</Test>
`;

exports[`Tabs should match snapshot 1`] = `
<Test>
  <Tabs>
    <DefaultTabs
      tabs={
        Object {
          "c1": Object {
            "children": "content1",
            "title": "c1",
          },
          "c2": Object {
            "children": "content2",
            "title": "c2",
          },
        }
      }
    >
      <Card>
        <div
          className="card"
        >
          <Nav
            tabs={
              Object {
                "c1": Object {
                  "children": "content1",
                  "title": "c1",
                },
                "c2": Object {
                  "children": "content2",
                  "title": "c2",
                },
              }
            }
          >
            <ul
              className="nav nav-tabs"
            >
              <li
                className="nav-item"
                key="tab-c1"
                onClick={[Function]}
              >
                <a
                  className="nav-link active"
                >
                  c1
                </a>
              </li>
              <li
                className="nav-item"
                key="tab-c2"
                onClick={[Function]}
              >
                <a
                  className="nav-link"
                >
                  c2
                </a>
              </li>
            </ul>
          </Nav>
          <CardBody>
            <div
              className="card-body"
            >
              <div
                className="tab-content"
              >
                <div
                  className="tab-pane active"
                >
                  content1
                </div>
              </div>
            </div>
          </CardBody>
        </div>
      </Card>
    </DefaultTabs>
  </Tabs>
</Test>
`;
